ingress/ingress.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2025-02-23T21:46:41Z"
  generation: 1
  name: nginx-service-ingress
  namespace: default
  resourceVersion: "347076"
  uid: 025229d9-8161-4a8b-ad52-54dd03aa8871
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-deploy
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
